  request down to the children. Prior to this arrangement, a restart or kill
  would leave many of the children running. This cleaned up Interchange stops
  to remove all preforked daemons (#107).

* Adjusted housekeeping to cull out old pids so that PIDcheck was enforced in
  PreFork (#107).

* Pass $opt to labeled_list fixing behaviour of fly-list to be matching other 
  x-list tags (#89).

UserDB
------

* Fixed UserDB login issues within embedded Perl by using
  Vend::Util::string_to_ref for deserialization of carts and other 
  hashes.  

* New validchars option to customize valid characters for usernames, e.g.
  adding the + character to the list of valid characters:

  UserDB    default    validchars "-A-Za-z0-9_@.+"

UserTag
-------

* Make [save-cart] keep cart if userdb returns with an error. 

* Make [formel] call [display] on unknown types.

* Fixed cleanse option of [import-fields] for composite keys (#98).

Filter
------

* Added "round" filter to round in floating-point-safe way, using the
  Vend::Util routine.

* Avoid ambiguity between two time formats in date_change filter.

* Added "lspace2nbsp" filter. Translates leading spaces to nbsp

Checks
------

* Added "match" check to match another CGI variable, e.g. for password
  verification.

Payment
-------

* New NetBilling module.

Jobs
----

* Added new job group db with export job to export databases offline for
  backup and version control purposes.

* Added process ID to "Run jobs" and "Finished jobs" log messages for better
  troubleshooting.

* Avoid cluttering global log file with job run messages.

* Allow parameters passed to jobs, acknowledges --email commandline option
  now (#103).
 
UI
--

* Fix page banner in menu editor.

* Tidied up some code in customer_mailing.html

* Fixed test to see if sku exists on creation of new item 
  in quick_question.html (#17)

* Avoid crashes on table export if data contains Interchange tags (#100).

Standard demo
-------------
