@@ -226,7 +226,7 @@ ui_template_name: leftonly
 </tr>
 <tr class="contentbar1"> 
   <td align=center colspan=2> 
-    [display table=userdb type=multiple column=mail_list key="[data session username]"]
+    [display table=userdb type=multiple column=mail_list key="[data session username]" applylocale=1]
   </td>
   <td colspan=2>
     [L]Put me on these mail lists (if any)[/L]
