@@ -117,6 +117,9 @@ Core
 * Pass $opt to labeled_list fixing behaviour of fly-list to be matching other 
   x-list tags (#89).
 
+* Pass applylocale option into Vend::Form::options_to_array in order to
+  localize option labels (#80).
+
 UserDB
 ------
 
